After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736781 - vc1parse: forge sequence-layer from seq_hdr instead of seq_layer
vc1parse: forge sequence-layer from seq_hdr instead of seq_layer
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 08:20 UTC by Aurélien Zanelli
Modified: 2014-09-17 08:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vc1parse: forge sequence-layer from seq_hdr instead of seq_layer (3.41 KB, patch)
2014-09-17 08:21 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2014-09-17 08:20:22 UTC
Hi all,

I found something strange in this vc1parse piece of code: http://cgit.freedesktop.org/gstreamer/gst-plugins-bad/tree/gst/videoparsers/gstvc1parse.c#n676

When we want VC1_HEADER_FORMAT_ASF + simple/main profile and we don't have seq_hdr_buffer, we forge it with seq_layer.
But when we want VC1_HEADER_FORMAT_SEQUENCE_LAYER and we don't have a seq_layer_buffer, we forge it with seq_layer.
Since seq_layer and seq_layer_buffer are set when parsing the sequence-layer, if we don't have a seq_layer_buffer, we won't have a valid seq_layer.

Therefore, I think it seq_layer_buffer should be forged from seq_hdr but I'm not sure. What is your opinion ?
Comment 1 Aurélien Zanelli 2014-09-17 08:21:30 UTC
Created attachment 286345 [details] [review]
vc1parse: forge sequence-layer from seq_hdr instead of seq_layer

I prepare a patch for this if confirmed.
Comment 2 Sebastian Dröge (slomo) 2014-09-17 08:38:06 UTC
commit de141c323737ca4bb3a28ce44e06a00d81966486
Author: Aurélien Zanelli <aurelien.zanelli@parrot.com>
Date:   Tue Sep 16 17:38:53 2014 +0200

    vc1parse: forge sequence-layer from seq_hdr instead of seq_layer
    
    If we don't have a seq_layer_buffer, we also don't have a valid
    seq_layer because there are set together in
    gst_vc1_parse_handle_seq_layer().
    
    So when output header format is sequence-layer and when we don't have a
    seq_layer_buffer, we forge one from seq_hdr.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736781